trying to fix docker container build

--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -2,9 +2,9 @@ FROM golang:1.23 AS builder
 
 WORKDIR /app
 
-RUN apt update && apt install -y npm && npm install -g tailwindcss
-
 COPY . .
+
+RUN apt update && apt install -y npm && npm install -g tailwindcss
 
 RUN npx tailwindcss -i ./web/main.css -o ./web/public/main.css -c ./web/tailwind.config.js --watch
 
@@ -14,13 +14,13 @@ RUN go install github.com/a-h/templ/cmd/templ@latest
 
 RUN templ generate
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o /entrypoint ./cmd/web
+RUN CGO_ENABLED=0 GOOS=linux go build -o ./entrypoint ./cmd/web
 
 FROM gcr.io/distroless/base-debian11 AS build
 
 WORKDIR /
 
-COPY --chown=nonroot --from=builder /entrypoint /app/web/public /
+COPY --chown=nonroot --from=builder /app/entrypoint /app/web/public /
 
 EXPOSE 8080
 
