build: update make and docker files for tailwind update

--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -4,15 +4,15 @@ WORKDIR /app
 
 COPY . .
 
-RUN wget https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64 -O tailwindcss
+RUN wget https://github.com/tailwindlabs/tailwindcss/releases/download/v4.0.0/tailwindcss-linux-x64 -O tailwindcss
 
 RUN chmod +x tailwindcss
 
-RUN ./tailwindcss -i /app/web/main.css -o /app/web/public/main.css -c /app/web/tailwind.config.js --minify
+RUN ./tailwindcss -i /app/web/main.css -o /app/web/public/main.css --minify
 
 RUN go mod download
 
-RUN go install github.com/a-h/templ/cmd/templ@latest
+RUN go install github.com/a-h/templ/cmd/templ@v0.3.819
 
 RUN templ generate
 
