--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -20,7 +20,10 @@ jobs:
         cache: true
     
     - name: Install dependencies
-      run: go mod download
+      run: 
+        go mod download /
+        go install github.com/a-h/templ/cmd/templ@v0.3.819 /
+        templ generate
     
     - name: Verify code formatting
       run: |
