build: move templ generate to own line

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -20,11 +20,11 @@ jobs:
         cache: true
     
     - name: Install dependencies
-      run: 
-        go mod download /
-        go install github.com/a-h/templ/cmd/templ@v0.3.819 /
-        templ generate
-    
+      run: go mod download 
+
+    - name: Generate Templ
+      run: go install github.com/a-h/templ/cmd/templ@v0.3.819 && templ generate
+
     - name: Verify code formatting
       run: |
         if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
